--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
           <p style="font-size: 15px;">Materiales de construcción, pinturas y más.</p>
           <p style="font-size: 15px;">R.U.C. 155749223-2-2024    D.V. 70</p>
           <p style="font-size: 15px;">Almirante, Bocas del Toro, Vía Chiriquí Grande, a lado del Restaurante Fortuna.</p>
-          <p style="font-size: 15px;">Correo: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d2a4a1a7a0a6bbbfb3aab0bdb1b3a1e392b5bfb3bbbefcb1bdbf">[email&#160;protected]</a></p>
+          <p style="font-size: 15px;">Correo: vsurtimaxbocas1@gmail.com</p>
           <p style="font-size: 15px;">Tel. 6874-8881 / 6804-3388</p>
           <div class="invoice-number" id="order-number-display">
               Orden #<span id="order-number-text"></span>
