--- a/catalog.html
+++ b/catalog.html
@@ -214,7 +214,7 @@
         .product-price {
             font-size: 28px;
             font-weight: bold;
-            color: var(--primary-color);
+            color: #dc3545;
             margin: 8px 0 2px 0; /* Reducido el margen inferior */
             width: 100%;
             text-align: center;
@@ -224,7 +224,7 @@
         .product-cost {
             font-size: 16px;
             font-weight: bold;
-            color: #dc3545; /* Rojo */
+            color: #1c8d87; /* Rojo */
             margin: 0 0 8px 0;
             width: 100%;
             text-align: center;
