--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
           <p class="company-name" style="font-size: 20px;">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
           <p style="font-size: 15px;">Materiales de construcción, pinturas y más.</p>
           <p style="font-size: 15px;">R.U.C. 155749223-2-2024    D.V. 70</p>
-          <p style="font-size: 15px;">Almirante, Bocas del Toro, Vía Chiriquí Grande, a lado del Restaurante Fortuna.</p>
+          <p style="font-size: 15px;">Almirante, Bocas del Toro, Vía Chiriquí Grande, al lado del Restaurante Fortuna.</p>
           <p style="font-size: 15px;">Correo: vsurtimaxbocas1@gmail.com</p>
           <p style="font-size: 15px;">Tel. 6874-8881 / 6804-3388</p>
           <div class="invoice-number" id="order-number-display">
