--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Precios - VENTAS SURTIMAX</title>
+    <link rel="icon" href="icon.png" type="image/png">
     <style>
         :root {
             --primary-color: #1c8d87;
@@ -370,6 +371,14 @@
             </svg>
             Imprimir Catálogo
         </button>
+        <a href="calcmargen.html" class="action-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="vertical-align: text-bottom; margin-right: 5px;">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+            </svg>
+            Calculadora de Margen
+        </a>
         <a href="index.html" class="action-btn" onclick="localStorage.removeItem('selectedProduct')">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="vertical-align: text-bottom; margin-right: 5px;">
                 <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
@@ -382,9 +391,9 @@
     <div class="catalog-container">
         <div class="header">
             <div class="logo-container">
-                <img src="logo.png" width="90" height="90" alt="Logo SURTIMAX">
+                <img src="logo.png" width="80" height="80" alt="Logo SURTIMAX">
             </div>
-            <p class="company-name" style="font-size: 20px;">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
+            <p class="company-name" style="font-size: 14px;">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
             <!--p style="font-size: 15px;">Materiales de construcción, pinturas y más.</p-->
             <h1>CATALOGO DE PRECIOS</h1>
         </div>
@@ -724,3 +733,4 @@
     </script>
 </body>
 </html>
+
