--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           </svg>
           Guardar Factura
       </button>
-      <input type="file" id="load-invoice-file" accept=".xlsx, .xls, .json" style="display: none;">
+      <input type="file" id="load-invoice-file" accept=".xlsx, .xls" style="display: none;">
       <button onclick="document.getElementById('load-invoice-file').click()" class="action-btn save-load-btn" style="font-size: 14px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="vertical-align: text-bottom; margin-right: 5px;">
               <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
@@ -545,7 +545,7 @@
     </svg>
     Ver Catálogo
 </button>
-      <input type="file" id="excel-file" accept=".xlsx, .xls, .json" style="display: none;">
+      <input type="file" id="excel-file" accept=".xlsx, .xls" style="display: none;">
   </div>
 
   <div class="invoice">
@@ -557,7 +557,7 @@
           <p class="company-name" style="font-size: 20px;">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
           <p style="font-size: 15px;">Materiales de construcción, pinturas y más.</p>
           <p style="font-size: 15px;">R.U.C. 155749223-2-2024    D.V. 70</p>
-          <p style="font-size: 15px;">Almirante, Bocas del Toro, Vía Chiriquí Grande, al lado del Restaurante Fortuna.</p>
+          <p style="font-size: 15px;">Almirante, Bocas del Toro, Vía Chiriquí Grande, la lado del Restaurante Fortuna.</p>
           <p style="font-size: 15px;">Correo: vsurtimaxbocas1@gmail.com</p>
           <p style="font-size: 15px;">Tel. 6874-8881 / 6804-3388</p>
           <div class="invoice-number" id="order-number-display">
@@ -671,7 +671,7 @@
       Producto agregado a la factura
   </div>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="xlsx.full.min.js"></script>
   <script src="invoice.js"></script>
   <script>
