--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             <option value="">Seleccione un producto</option>
         </select>
         <input type="number" id="product-quantity" placeholder="Cantidad" required min="1">
-        <input type="text" id="product-code" placeholder="Código (opcional)">
+        <input type="text" id="product-code" placeholder="Código">
         <input type="text" id="product-description" placeholder="Descripción" required>
         <input type="number" id="product-price" placeholder="Precio Unitario" step="0.01" required min="0.01">
         <button type="submit" class="action-btn add-btn" style="font-size: 15px;">
