--- a/calcmargen.html
+++ b/calcmargen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Margen Utilidad - VENTAS SURTIMAX</title>
-    <link rel="icon" href="calc.png" type="image/png">
+    <link rel="icon" href="icon/icon.png" type="image/png">
     <style>
         :root {
             --primary-color: #1c8d87;
@@ -423,7 +423,7 @@
     <div class="calculator-container">
         <div class="header">
             <div class="logo-container">
-                <img src="logo.png" width="80" height="80" alt="Logo SURTIMAX">
+                <img src="icon/logo.png" width="80" height="80" alt="Logo SURTIMAX">
             </div>
             <p class="company-name">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
             <h1>Calculadora de Margen</h1>
