--- a/catalogsc.html
+++ b/catalogsc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Precios - VENTAS SURTIMAX</title>
-    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="icon" href="icon/icon.png" type="image/png">
     <style>
         :root {
             --primary-color: #1c8d87;
@@ -407,7 +407,7 @@
     <div class="catalog-container">
         <div class="header">
             <div class="logo-container">
-                <img src="logo.png" width="80" height="80" alt="Logo SURTIMAX">
+                <img src="icon/logo.png" width="80" height="80" alt="Logo SURTIMAX">
             </div>
             <p class="company-name" style="font-size: 14px;">VENTAS SURTIMAX, BOCAS DEL TORO, S.A.</p>
             <!--p style="font-size: 15px;">Materiales de construcción, pinturas y más.</p-->
