--- a/calcmargen.html
+++ b/calcmargen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Margen Utilidad - VENTAS SURTIMAX</title>
-    <link rel="icon" href="icon/icon.png" type="image/png">
+    <link rel="icon" href="icon/logo2x.png" type="image/png">
     <style>
         :root {
             --primary-color: #1c8d87;
