--- a/catalog.html
+++ b/catalog.html
@@ -200,9 +200,9 @@
             position: absolute;
             top: 5px;
             right: 5px;
-            background-color: #28a745;
+            background-color: #777572;
             color: white;
-            font-size: 11px;
+            font-size: 12.5px;
             font-weight: bold;
             padding: 3px 6px;
             border-radius: 4px;
